@@ -1,3 +1,9 @@
+2005-01-20  Davide Viti  <zinosat@tiscali.it>
+
+	* l10n-spellcheck.sh: the name of the dir with all this stuff is not bound
+	to be called "~/l10n-spellcheck" anymore. Removing all the ugly "cd" makes
+	it more secure and flexable.
+
 2005-01-14  Davide Viti  <zinosat@tiscali.it>
 
 	* README updated with latest changes
